--- a/02_CSS/TEMA 3-CSS/02_EjerciciosCSS/ejercicio002/styles002.css
+++ b/02_CSS/TEMA 3-CSS/02_EjerciciosCSS/ejercicio002/styles002.css
@@ -1,18 +1,29 @@
 
 *{
-    margin: 10px;
+    box-sizing: border-box;
 }
 
 h1{
     border:solid blue 2px;
-    padding: 10px;
+    padding:10px;
+    margin-top: 30px;
+    margin-bottom: 30px;
 }
 
 h2 {
     border: solid gray 2px;
+    padding: 5px;
+    margin-top: 15px;
+    margin-bottom: 15px;
 }
 
 ul{
     border: solid green 2px;
+    margin-right: 10px;
+    margin-left: 10px;
+}
+
+ul li{
+    margin:15px;
 }
 
