--- a/02_CSS/TEMA 3-CSS/02_EjerciciosCSS/ejercicio012/estilos012.css
+++ b/02_CSS/TEMA 3-CSS/02_EjerciciosCSS/ejercicio012/estilos012.css
@@ -1,6 +1,6 @@
 .container{
-    border: solid black;
-    border-radius: 10px;
+    border: solid black 1px;
+    border-radius: 10px; /* Esquinas redondeadas */
     margin: 20px auto;
     width: 50%;
 }
@@ -14,8 +14,7 @@
 .container:nth-of-type(3){
     background-color: burlywood;
     height: 1000px;
-    margin-top: 20px;
-    margin-bottom: 20px;
+    margin: 20px auto;
     width: 60%;
 }
 
