--- a/02_CSS/TEMA 3-CSS/02_EjerciciosCSS/ejercicio011/style.css
+++ b/02_CSS/TEMA 3-CSS/02_EjerciciosCSS/ejercicio011/style.css
@@ -7,14 +7,39 @@ body{
 h1{
     position:relative;
     left: 50px;
-    top: 10px;
+    bottom: 10px;
     width: 80%;
 }
 .padre{
     background-color: lightblue;
     height: 200px;
-    width: 80%;
+    width: 60%;
     margin: 20px auto;
+    position: relative;
+}
+
+.padre div{
+    position: absolute;
+    height: 50px;
+    width: 50px;
+}
+
+.hijo1{
+    background-color: red;
+    left: 100px;
+    top: 50px;
+    z-index: 2;
+}
+.hijo2{
+    background-color: chartreuse;
+    left: 120px;
+    top: 30px;
+}
+.footer{
+    background-color: lightgray;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
 }
 .sticky-menu{
     background-color: lightgray;
@@ -22,20 +47,15 @@ h1{
     top: 0;
     z-index: 1;
 }
-.footer{
-    background-color: lightgray;
-    position: fixed;
-    bottom: 0;
-}
 .footer div, .sticky-menu div{
-    display: inline;
+    display: inline-block;
     text-align: center;
-    padding: 10px;
-    width: 100%;
+    padding: 20px 20px;
+    width: auto;
 }
 .large{
     background-color: burlywood;
-    height: 100px;
+    height: 1000px;
     margin: 20px auto;
     width: 60%;
 }
