--- a/02_CSS/TEMA 3-CSS/02_EjerciciosCSS/ejercicio013/estilos.css
+++ b/02_CSS/TEMA 3-CSS/02_EjerciciosCSS/ejercicio013/estilos.css
@@ -2,36 +2,37 @@
     box-sizing: border-box;
 }
 .container{
-    background-color: gray;
+    background-color: lightgray;
     margin: 20px auto;
-    margin-bottom: 20px;;
     padding: 20px;
     width: 90%;
 }
-
 .sidebar{
     background-color: yellow;
-    float:left;
     width: 25%;
     height: 600px;
+    float: left;
 }
-.article {
+.article{
     background-color: red;
     float: left;
     height: 300px;
-    width: 20%;
     margin-left: 5%;
+    width: 20%;
 }
-
 footer{
     background-color: blue;
     float: left;
     height: 290px;
     margin-left: 5%;
     margin-top: 10px;
-    width:70%;
+    width: 70%;
 }
-.cb{
+#cb{
     clear: both;
 }
 
+.article:hover {
+    transition: 1s;
+    border-radius: 50%;
+}
